# EasyStock

./: LICENSE  pyproject.toml  requirements.txt
core/: analysis.py
eStock/: analysis.py
